--- a/TestSolution1/FormsApp1/FormsApp1.csproj
+++ b/TestSolution1/FormsApp1/FormsApp1.csproj
@@ -50,6 +50,24 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_AddPerson.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_AddPerson.Designer.cs">
+      <DependentUpon>Form_AddPerson.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Login.Designer.cs">
+      <DependentUpon>Form_Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_RemovePerson.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_RemovePerson.Designer.cs">
+      <DependentUpon>Form_RemovePerson.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
